# manas-helper

./: .gitignore  main.py  pyproject.toml
src/: config.py  main.py  tasks.py
src/callback_data/: routes.py
src/database/: __init__.py  applications.py  base.py  departments.py  ratings.py  routes.py
src/handlers/: __init__.py  applications.py  routes.py
src/models/: __init__.py  applications.py  departments.py  rating.py
src/repositories/: __init__.py  applications.py  departments.py  routes.py
src/services/: applications.py  departments.py  manas.py  parsers.py
src/views/: __init__.py  applications_count.py  applications_statistics.py  base.py  new_application.py  routes_menu.py  top_applications.py
