[tool.poetry]
name = "manas-exams-countdown"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "manas_exams_countdown"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
humanize = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
