[tool.poetry]
name = "manas-exams-countdown"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "manas_exams_countdown"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
httpx = "^0.24.1"
bs4 = "^0.0.1"
lxml = "^4.9.3"
sqlalchemy = "^2.0.18"
apscheduler = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
